faq css bleeding fixed

--- a/app/faq/styles.module.css
+++ b/app/faq/styles.module.css
@@ -1,8 +1,3 @@
-html, body {
-    height: 100%;
-    margin: 0;
-}
-
 @font-face {
     font-family: 'Darker Grotesque';
     src: url('../fonts/DarkerGrotesque-Black.ttf') format('truetype');
@@ -13,15 +8,6 @@ html, body {
     font-family: 'Darker Grotesque Med';
     src: url('../fonts/DarkerGrotesque-Medium.ttf') format('truetype');
     font-style: normal;
-}
-
-body {
-    background-color: #e3e3e3;
-    background-image: 
-        linear-gradient(to top, #1f3b5385, rgba(0, 0, 0, 0) 50%),
-        linear-gradient(to right, #bbbbbb39 1px, transparent 1px),
-        linear-gradient(to bottom, #bbbbbb39 1px, transparent 1px);
-    background-size: 100% 100%, 50px 50px, 50px 50px;
 }
 
 .container {
@@ -44,11 +30,11 @@ body {
     font-size: 42px;
 }
 
-.home:hover, .search-button:hover {
+.home:hover, .searchButton:hover {
     color: #627D9F;
 }
 
-.cloud-icon {
+.cloudIcon {
     margin-right: 12px;
     height: 35px;
     width: 35px;
@@ -71,7 +57,7 @@ body {
     margin-bottom: 1%;
 }
 
-.role-title {
+.roleTitle {
     font-family: "Darker Grotesque Med";
     color: #1F3C53;
     font-weight: 800;
@@ -80,7 +66,7 @@ body {
     margin-left: 3%;
 }
 
-.role-select {
+.roleSelect {
     margin-top: 6px;
 }
 
@@ -90,7 +76,7 @@ body {
     margin-top: 3%;
 }
 
-.search-button {
+.searchButton {
     font-family: "Darker Grotesque Med";
     font-size: 25px;
     background-color: #1F3C53;
@@ -100,7 +86,7 @@ body {
     margin-bottom: 3%
 }
 
-.search-button:hover {
+.searchButton:hover {
     background-color: #627D9F;
     color: #ffffff;
 }
@@ -123,17 +109,4 @@ body {
     padding-left: 2%;
     margin-top: 5%;
     border-radius: 5px;
-}
-
-select {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 17px;
-    height: 30px;
-    padding-left: 7px;
-    background-color: #727779;
-    border-radius: 9px;
-    outline: none;
-    font-family: "Darker Grotesque Med";
 }
